# SortingAlgorithmsComparison

./: README.md
MainProject/: CMakeLists.txt  CMakeLists_CLANG.txt  Results_ALL_ONLY_SORT_1723799933286053019.xlsx  Results_Summary_ALL_Algorithms_ALL_TESTS_GCC_1723803003985091563.xlsx  main.cpp
MainProject/Algorithms/: BubbleSort.cpp  BubbleSort.h  QuickSortRusev.cpp  QuickSortRusev.h  RadixSortRusev.cpp  RadixSortRusev.h  RadulsSort.cpp  RadulsSort.h  RusevMergeSort32.cpp  RusevMergeSort32.h  RusevSwapSort2.cpp  RusevSwapSort2.h  RusevSwapSort4.cpp  RusevSwapSort4.h  RusevUltra.cpp  RusevUltra.h  TimSortRusev.cpp  TimSortRusev.h  Yaroslavskiy.cpp  Yaroslavskiy.h  blocked_double_pivot_check_mosqrt.cpp  blocked_double_pivot_check_mosqrt.h  qsort3_aumueller.cpp  qsort3_aumueller.h  stl_StableSort.cpp  stl_StableSort.h
MainProject/MSVC2019/: RESULTS Other.txt  RESULTS QuickSortDualPivot.txt  RESULTS QuickSortDualPivotMerge.txt  RESULTS QuickSortDualPivotRusevMerge.txt  RESULTS QuickSortDualPivotRusevMerge_3rd_merge_improve.txt  RESULTS QuickSortDualPivotRusev_WithCheck.txt  RESULTS QuickSortDualPivot_Qsort3_aumueller.txt  RESULTS QuickSortDualPivot_Yaroslavskiy.txt  RESULTS QuicksortSinglePivotWithCheck.txt  RESULTS QuicksortSinglePivot_RusevOptimized.txt  RESULTS RusevMergeSort1024basedOn2.txt  RESULTS RusevMergeSort1024basedOn4_2.txt  RESULTS RusevMergeSort128basedOn2.txt  RESULTS RusevMergeSort128basedOn4_2.txt  RESULTS RusevMergeSort2048basedOn2.txt  RESULTS RusevMergeSort2048basedOn4_2.txt  RESULTS RusevMergeSort256basedOn2.txt  RESULTS RusevMergeSort256basedOn4_2.txt  RESULTS RusevMergeSort32basedOn2.txt  RESULTS RusevMergeSort32basedOn4_2.txt  RESULTS RusevMergeSort64basedOn2.txt  (+82 more)
(+392 files in other folders)
